--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,57 @@
   background: #87CEFA;
 }
 
+body {
+  background-color: #87CEFA;
+}
+
+.winfo {
+  background: #B0C4DE;
+}
+
+.indivSpot {
+  border: 1px dashed black;
+  margin-bottom: 20px;
+  background: #B0C4DE;
+}
+
+.person {
+  float: left;
+}
+
+.writer {
+  float: left;
+
+}
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+}
+
+.gimages {
+  border: .1px solid black;
+}
+
+.repos {
+  text-decoration: underline;
+}
+
 .logo {
   display: flex;
   font-size: 40px;
   background: #B0C4DE;
   padding: inherit;
+}
+
+.genre {
+  text-decoration: underline;
 }
 
 .collapse {
@@ -26,9 +72,15 @@
 
 .nav-item {
   border: .5px solid black;
+  margin-left: 1px;
   display: flex;
   align-items: center;
   background: #B0C4DE;
+}
+
+.nav-link:hover {
+  background: grey;
+  padding: auto;
 }
 
 .welcome {
@@ -42,16 +94,21 @@
 
 .para {
   text-align: center;
+  font-family: "Helvetica", "Times New Roman", sans-serif;
 }
 
 .ipara {
   display: flex;
   justify-content: center;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 
 .genre-object {
   display: flex;
-  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .printT {
@@ -63,4 +120,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.incomplete {
+  color: red;
+  background: #87CEFA;
 }
